// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`blackboxWebWin > windows > nsis - web-installer update is rejected 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "TestApp Setup.exe",
      "safeArtifactName": "TestApp-Setup.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp Setup.exe.blockmap",
      "safeArtifactName": "TestApp-Setup.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp Setup.exe",
          },
        ],
        "releaseDate": "@releaseDate",
        "signature": "@signature",
        "signatures": [
          {
            "keyId": "@keyId",
            "signature": "@signature",
          },
        ],
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`blackboxWebWin > windows > nsis - web-installer update is rejected 2`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "TestApp Setup.exe",
      "safeArtifactName": "TestApp-Setup.exe",
      "updateInfo": {
        "packages": {
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "testapp-1.0.1-x64.nsis.7z",
            "path": "testapp-1.0.1-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
      },
    },
    {
      "arch": "x64",
      "file": "testapp-1.0.1-x64.nsis.7z",
    },
    {
      "file": "latest.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "url": "TestApp Setup.exe",
          },
        ],
        "packages": {
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "testapp-1.0.1-x64.nsis.7z",
            "path": "testapp-1.0.1-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
        "releaseDate": "@releaseDate",
        "signature": "@signature",
        "signatures": [
          {
            "keyId": "@keyId",
            "signature": "@signature",
          },
        ],
        "version": "1.0.1",
      },
    },
  ],
}
`;
